Fixed GENERATE button align
center tag

--- a/lottoGen.css
+++ b/lottoGen.css
@@ -49,7 +49,6 @@ body {
   background-color: #e01010;
   cursor: pointer;
   border: medium solid #c90e0e;
-  margin-left: -70px;
   margin-bottom: 20px;
 }
 
